feat: implementacion de los metodos de actualizar y eliminar en los componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header></app-header>
 
   <div class="mt-12 md:flex">
-    <app-formulario class="md:w-1/2 lg:w-2/5"></app-formulario>
-    <app-listado-pacientes class="md:w-1/2 lg:w-3/5 md:h-screen overflow-y-scroll"></app-listado-pacientes>
+    <app-formulario class="md:w-1/2 lg:w-2/5" [paciente]="paciente"></app-formulario>
+    <app-listado-pacientes class="md:w-1/2 lg:w-3/5 md:h-screen overflow-y-scroll" (onEditarPaciente)="editarPaciente($event)"></app-listado-pacientes>
   </div>
 </div>
